@@ -1,6 +1,6 @@
 package View;
 
-import Model.model;
+import Model.Model;
 
 import javax.swing.*;
 import javax.swing.border.Border;
@@ -12,11 +12,11 @@ import java.util.Random;
 public class Main {
     public ArrayList<JPanel> panel_main;
     public ArrayList<Character> charac_main;
-    public model model_;
+    public Model model_;
     public JPanel player1;
     public boolean isplayer1;
     public JFrame fenetre;
-    public Main(JFrame fenetre_, int i, model model){
+    public Main(JFrame fenetre_, int i, Model model){
         panel_main = new ArrayList<JPanel>();
         fenetre = fenetre_;
         charac_main = new ArrayList<Character>();
@@ -31,14 +31,11 @@ public class Main {
             player1.add(ptest);
             panel_main.add(ptest);
         }
-        if (i == 1)
-        {
-            fenetre_.add(player1, BorderLayout.NORTH);
+        if (i == 1) {
+            fenetre_.add(player1, BorderLayout.SOUTH);
             isplayer1 = true;
-        }
-        else
-        {
-            fenetre_.add(player1,BorderLayout.SOUTH);
+        } else {
+            fenetre_.add(player1, BorderLayout.NORTH);
             isplayer1 = false;
         }
         init_main();
@@ -49,13 +46,30 @@ public class Main {
     {
         for(int i = 0; i < list.size();i++)
         {
+            boolean removed = false;
             for(int j = 0; j < charac_main.size();j++)
             {
-                if(list.get(i).equals(Character.toString(charac_main.get(j))))
+                if(list.get(i).equalsIgnoreCase(Character.toString(charac_main.get(j))))
                 {
                     charac_main.remove(j);
-                    panel_main.get(j).removeAll();
+                    if (j < panel_main.size()) {
+                        panel_main.get(j).removeAll();
+                        panel_main.remove(j);
+                    }
+                    removed = true;
                     break;
+                }
+            }
+            if (!removed) {
+                for (int j = 0; j < charac_main.size(); j++) {
+                    if (charac_main.get(j) == '!') {
+                        charac_main.remove(j);
+                        if (j < panel_main.size()) {
+                            panel_main.get(j).removeAll();
+                            panel_main.remove(j);
+                        }
+                        break;
+                    }
                 }
             }
         }
@@ -68,22 +82,20 @@ public class Main {
             Random rand = new Random();
             int r = rand.nextInt(model_.get_rand().size() -1) ;
             char to_add = model_.get_rand().get(r);
-            Character update = new Character(to_add);
+            Character update = Character.valueOf(to_add);
 
             while (!(can_take(update)))
             {
                 rand = new Random();
                 r = rand.nextInt(model_.get_rand().size() -1) ;
                 to_add = model_.get_rand().get(r);
-                update = new Character(to_add);
+                update = Character.valueOf(to_add);
             }
             model_.get_rand().remove(r);
             update_model(update);
             charac_main.add(update);
-           // setPanel(panel_main.get(i),update);
         }
         player1.removeAll();
-       // player1 = new JPanel(new GridLayout(1,7));
         player1.setPreferredSize(new Dimension((int) fenetre.getWidth() ,(int) (0.1 * fenetre.getHeight())));
         panel_main = new ArrayList<JPanel>();
         Border blackline = BorderFactory.createLineBorder(Color.black,1);
@@ -97,15 +109,23 @@ public class Main {
         }
         if (isplayer1)
         {
-            fenetre.add(player1, BorderLayout.NORTH);
-
+            if (player1.getParent() != null) {
+                player1.getParent().revalidate();
+                player1.getParent().repaint();
+            } else {
+                fenetre.add(player1, BorderLayout.NORTH);
+            }
         }
         else
         {
-            fenetre.add(player1,BorderLayout.SOUTH);
+            if (player1.getParent() != null) {
+                player1.getParent().revalidate();
+                player1.getParent().repaint();
+            } else {
+                fenetre.add(player1, BorderLayout.SOUTH);
+            }
         }
         player1.updateUI();
-       // fenetre.pack();
     }
 
     public  void init_main()
@@ -115,14 +135,14 @@ public class Main {
             Random rand = new Random();
             int r = rand.nextInt(model_.get_rand().size() -1) ;
             char to_add = model_.get_rand().get(r);
-            Character update = new Character(to_add);
+            Character update = Character.valueOf(to_add);
 
             while (!(can_take(update)))
             {
                 rand = new Random();
                 r = rand.nextInt(model_.get_rand().size() -1) ;
                 to_add = model_.get_rand().get(r);
-                update = new Character(to_add);
+                update = Character.valueOf(to_add);
             }
             model_.get_rand().remove(r);
             update_model(update);
@@ -131,12 +151,31 @@ public class Main {
         }
     }
 
-    public static void setPanel(JPanel to_set,Character a) {
-        JLabel label;
-        JPanel tmp = new JPanel(new BorderLayout());
-        label = new JLabel(new ImageIcon("tests/ressources/lettre/" + a.toString().toUpperCase() + ".png"));
-        tmp.add(label,BorderLayout.CENTER);
-        to_set.add(tmp, BorderLayout.CENTER);
+    public static void setPanel(JPanel to_set, Character a) {
+        if (a == null) return;
+        to_set.removeAll();
+        char letterChar = Character.toUpperCase(a);
+        
+        JPanel tile = new JPanel(new BorderLayout());
+        tile.setBackground(new Color(254, 243, 199));
+        tile.setBorder(BorderFactory.createCompoundBorder(
+                BorderFactory.createLineBorder(new Color(217, 119, 6), 2, true),
+                BorderFactory.createEmptyBorder(1, 4, 1, 4)
+        ));
+
+        JLabel letterLabel = new JLabel(String.valueOf(letterChar), SwingConstants.CENTER);
+        letterLabel.setFont(new Font("Segoe UI", Font.BOLD, 18));
+        letterLabel.setForeground(new Color(30, 41, 59));
+
+        int val = View.Combineur.convert_cost(Character.toLowerCase(letterChar));
+        JLabel valLabel = new JLabel(val > 0 ? String.valueOf(val) : "", SwingConstants.RIGHT);
+        valLabel.setFont(new Font("Segoe UI", Font.BOLD, 10));
+        valLabel.setForeground(new Color(120, 53, 15));
+
+        tile.add(letterLabel, BorderLayout.CENTER);
+        tile.add(valLabel, BorderLayout.SOUTH);
+
+        to_set.add(tile, BorderLayout.CENTER);
     }
 
 
